--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -38,8 +38,9 @@ ENV FLASK_APP=backend/app.py
 EXPOSE 5000
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD ["sh", "-c", "curl -f http://localhost:${PORT:-5000}/health || exit 1"]
+    CMD ["sh", "-c", "curl -f http://localhost:5000/health || exit 1"]
 
 # 启动应用
+ENV IN_DOCKER="1"
 CMD ["uv", "run", "--directory", "backend", "python", "app.py"]
 
