--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build and Package
 
+permissions:
+  contents: write
+
 on:
   workflow_dispatch:
   push:
@@ -76,3 +79,39 @@ jobs:
         with:
           name: banana-slides-${{ runner.os }}
           path: backend/dist/banana-slides*
+
+  release:
+    needs: package
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - name: Download All Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Prepare Release Assets
+        run: |
+          mkdir release_assets
+          # Copy and rename artifacts if they exist
+          if [ -d "artifacts/banana-slides-Linux" ]; then
+            cp artifacts/banana-slides-Linux/banana-slides release_assets/banana-slides-linux
+            chmod +x release_assets/banana-slides-linux
+          fi
+          if [ -d "artifacts/banana-slides-macOS" ]; then
+            cp artifacts/banana-slides-macOS/banana-slides release_assets/banana-slides-macos
+            chmod +x release_assets/banana-slides-macos
+          fi
+          if [ -d "artifacts/banana-slides-Windows" ]; then
+            cp artifacts/banana-slides-Windows/banana-slides.exe release_assets/banana-slides-windows.exe
+          fi
+          ls -l release_assets/
+
+      - name: Create "latest" Pre-release
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: release_assets/*
