--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          # Linux x64
+          - os: ubuntu-latest
+            artifact_name: banana-slides-linux-x64
+            sep: ":"
+
+          # Windows x64
+          - os: windows-latest
+            artifact_name: banana-slides-windows-x64
+            sep: ";"
+
+          # macOS Apple Silicon
+          - os: macos-latest
+            artifact_name: banana-slides-macos-applesilicon
+            sep: ":"
 
     steps:
       - uses: actions/checkout@v4
@@ -66,18 +80,12 @@ jobs:
         shell: bash
         run: |
           cd backend
-          # Determine separator
-          if [ "${{ runner.os }}" == "Windows" ]; then
-            SEP=";"
-          else
-            SEP=":"
-          fi
-          pyinstaller --name banana-slides --onefile --add-data "static${SEP}static" app.py
+          pyinstaller --name banana-slides --onefile --add-data "static${{ matrix.sep }}static" app.py
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: banana-slides-${{ runner.os }}
+          name: ${{ matrix.artifact_name }}
           path: backend/dist/banana-slides*
 
   release:
@@ -93,18 +101,29 @@ jobs:
       - name: Prepare Release Assets
         run: |
           mkdir release_assets
-          # Copy and rename artifacts if they exist
-          if [ -d "artifacts/banana-slides-Linux" ]; then
-            cp artifacts/banana-slides-Linux/banana-slides release_assets/banana-slides-linux
-            chmod +x release_assets/banana-slides-linux
-          fi
-          if [ -d "artifacts/banana-slides-macOS" ]; then
-            cp artifacts/banana-slides-macOS/banana-slides release_assets/banana-slides-macos
-            chmod +x release_assets/banana-slides-macos
-          fi
-          if [ -d "artifacts/banana-slides-Windows" ]; then
-            cp artifacts/banana-slides-Windows/banana-slides.exe release_assets/banana-slides-windows.exe
-          fi
+
+          # Helper function to copy if exists
+          copy_artifact() {
+            src_dir="artifacts/$1"
+            src_name="$2"
+            dest_name="$3"
+            if [ -d "$src_dir" ]; then
+              # Find the file inside the directory (ignoring extension if needed, but usually exact name)
+              # Windows puts .exe, Linux/Mac no extension usually
+              if [ -f "$src_dir/$src_name" ]; then
+                cp "$src_dir/$src_name" "release_assets/$dest_name"
+                chmod +x "release_assets/$dest_name"
+              elif [ -f "$src_dir/$src_name.exe" ]; then
+                cp "$src_dir/$src_name.exe" "release_assets/$dest_name"
+              fi
+            fi
+          }
+
+          copy_artifact "banana-slides-linux-x64" "banana-slides" "banana-slides-linux-x64"
+          copy_artifact "banana-slides-macos-applesilicon" "banana-slides" "banana-slides-macos-applesilicon"
+          copy_artifact "banana-slides-windows-x64" "banana-slides" "banana-slides-windows-x64.exe"
+
+          echo "Release Assets:"
           ls -l release_assets/
 
       - name: Create "latest" Pre-release
